--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <title>GitSub</title>
 </head>
 <body>
+  <div id = "footerContainer">
+    <nav class="nav">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
+      <a class="nav-link active" aria-current="page" href="#">Terms</a>
+      <a class="nav-link" href="#">Privacy</a>
+      <a class="nav-link" href="#">Security</a>
+      <a class="nav-link" href="#">Status</a>
+      <a class="nav-link" href="#">Help</a>
+      <img src="https://cdn.iconscout.com/icon/free/png-256/github-163-761603.png" alt="" width="40" height="34">
+      <a class="nav-link" href="#">Contact Github</a>
+      <a class="nav-link" href="#">Pricing</a>
+      <a class="nav-link" href="#">API</a>
+      <a class="nav-link" href="#">Training</a>
+      <a class="nav-link" href="#">Blog</a>
+      <a class="nav-link" href="#">About</a>
+    </nav>
+</div>
   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
