--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <title>GitSub</title>
 </head>
 <body>
+  <div id="navbar container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="index.html">Overview</a>
+          <a class="nav-link" href="Repos.html">Repository</a>
+          <a class="nav-link" href="Projects.html">Projects</a>
+          <a class="nav-link" href="Packages.html">Packages</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
+
+
+
+
   <div id = "footerContainer">
     <nav class="nav">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
