added packages array

--- a/Packages.html
+++ b/Packages.html
@@ -9,8 +9,100 @@
   <title>Packages</title>
 </head>
 <body>
-  
+
+  <div id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="index.html">Overview</a>
+            <a class="nav-link" href="Repos.html">Repository</a>
+            <a class="nav-link" href="Projects.html">Projects</a>
+            <a class="nav-link" href="Packages.html">Packages</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <!-- USER PROFILE -->
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title">Name</h4>
+      <h5 class="card-text">username</h5>
+      <p>Bio</p>
+      <button type="button" class="btn btn-secondary">Follow</button>
+      <button type="button" class="btn btn-secondary">Sponsor</button>
+      <button type="button" class="btn btn-secondary">...</button>
+      <p>followers</p>
+      <p>following</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li>New York, New York</li>
+      <li>github@aboutmonica.com</li>
+      <li>https://www.aboutmonica.com</li>
+      <li>@indigitalcolor</li>
+    </ul>
+    <ul class="list-group list-group-flush">
+      <h6>Highlights</h6>
+      <li>Arctic Code Vault Contributor</li>
+      <li>GitHub Star</li>
+      <li>PRO</li>
+    </ul>
+    <ul class="list-group list-group-flush">
+      <h6>Oragnizations</h6>
+    </ul>
+    <ul class="list-group list-group-flush">
+      <h6>Sponsors</h6>
+    </ul>
+  </div>
+
+<div id="cardsContainer"></div>
+
+<div id="formContainer" >
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+    <h5 class="card-title">Create a new repository</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Coordinate, track and update your work in one piece, so projects stay transparent and on schedule.</h6>
+    <p class="card-text">Input extra text needed here</p>
+   
+    <p class="card-text">Repository Name:</p>
+    <div class="form-floating">
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+      <label for="floatingTextarea"></label>
+    </div>
+
+    <p class="card-text">Description:</p>
+    <div class="form-floating">
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+      <label for="floatingTextarea2"></label>
+    </div>
+
+    <button type="button" class="btn btn-primary">Create Repository</button>
+    </div>
+  </div>
+</div>
+
+  <div id="footerContainer">
+    <nav class="nav justify-content-center">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
+      <a class="nav-link active" aria-current="page" href="#">Terms</a>
+      <a class="nav-link" href="#">Privacy</a>
+      <a class="nav-link" href="#">Security</a>
+      <a class="nav-link" href="#">Status</a>
+      <a class="nav-link" href="#">Help</a>
+      <img src="https://cdn.iconscout.com/icon/free/png-256/github-163-761603.png" alt="" width="40" height="34">
+      <a class="nav-link" href="#">Contact Github</a>
+      <a class="nav-link" href="#">Pricing</a>
+      <a class="nav-link" href="#">API</a>
+      <a class="nav-link" href="#">Training</a>
+      <a class="nav-link" href="#">Blog</a>
+      <a class="nav-link" href="#">About</a>
+    </nav>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="Packages.js"></script>
 </body>
 </html>
