added some styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   </div>
 
   <!-- USER PROFILE -->
-  <div class="card" style="width: 18rem;">
+  
+  <div class="profile-card card" style="width: 18rem;">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Name</h4>
