--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/f205eb00f2.js" crossorigin="anonymous"></script>
   <title>GitSub</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Overview</a>
-            <a class="nav-link" href="Repos.html">Repository</a>
-            <a class="nav-link" href="Projects.html">Projects</a>
-            <a class="nav-link" href="Packages.html">Packages</a>
+            <a class="nav-link" href="index.html"><i class="fas fa-book-open fa-xs"></i>Overview</a>
+            <a class="nav-link" href="Repos.html"><i class="fas fa-book fa-xs"></i>Repositories</a>
+            <a class="nav-link" href="Projects.html"><i class="fas fa-list-alt fa-xs"></i>Projects</a>
+            <a class="nav-link" href="Packages.html"><i class="fas fa-box-open fa-xs"></i>Packages</a>
           </div>
         </div>
       </div>
