--- a/Packages.html
+++ b/Packages.html
@@ -11,7 +11,7 @@
 <body>
 
   <div id="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
@@ -26,7 +26,7 @@
   </div>
 
   <!-- USER PROFILE -->
-  <div class="card" style="width: 18rem;">
+  <div class="profile-card card" style="width: 18rem;">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Name</h4>
@@ -58,10 +58,10 @@
     </ul>
   </div>
 
-<div id="cardsContainer"></div>
+<div id="cardsContainer" class="loopCard packagesContainer"></div>
 
-<form id="formContainer" >
-  <div class="card" style="width: 18rem;">
+<form id="formContainer"class="formStyle" >
+  <div class="card">
     <div class="card-body">
     <h5 class="card-title">Add a New Package</h5>
     <h6 class="card-subtitle mb-2 text-muted">Safely publish packages, store your packages alongside your code, and share your packages privately with your team.</h6>
@@ -80,7 +80,7 @@
   </div>
 </form>
 
-  <div id="footerContainer">
+  <div id="footerContainer"class="footerStyle">
     <nav class="nav justify-content-center">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
       <a class="nav-link active" aria-current="page" href="#">Terms</a>
