added icons to nav bar in all html files

--- a/Repos.html
+++ b/Repos.html
@@ -17,10 +17,10 @@
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Overview</a>
-            <a class="nav-link" href="Repos.html">Repository</a>
-            <a class="nav-link" href="Projects.html">Projects</a>
-            <a class="nav-link" href="Packages.html">Packages</a>
+            <a class="nav-link" href="index.html"><i class="fas fa-book-open fa-xs"></i>Overview</a>
+            <a class="nav-link" href="Repos.html"><i class="fas fa-book fa-xs"></i>Repositories</a>
+            <a class="nav-link" href="Projects.html"><i class="fas fa-list-alt fa-xs"></i>Projects</a>
+            <a class="nav-link" href="Packages.html"><i class="fas fa-box-open fa-xs"></i>Packages</a>
           </div>
         </div>
       </div>
