Working on deleting not needed buttons

--- a/Repos.html
+++ b/Repos.html
@@ -65,10 +65,8 @@
 <form id="formContainer" >
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-    <h5 class="card-title">Create a new repository</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Coordinate, track, and update your work in one place, so projects stay transparent and on schedule.</h6>
-    <p class="card-text">Input extra text needed here</p>
-   
+    <h5 class="card-title">Create A New Repository</h5>      
+    </div>
     <p class="card-text">Repository Name:</p>
     <div class="form-floating">
       <input class="form-control" placeholder="Leave a comment here" id="infoInput"></input>
