tried to add flexbox to project and repos page and failed

--- a/Projects.html
+++ b/Projects.html
@@ -58,8 +58,8 @@
       <h6>Sponsors</h6>
     </ul>
   </div>
-<div id="loopContainer" class="loopCard"></div>
-<form id="projectFormContainer" class="formStyle" >
+<div id="loopContainer" class="loopCard loopContainer"></div>
+<form id="projectFormContainer" class="formStyle projectForm" >
   <div class="card">
     <div class="card-body">
     <h5 class="card-title">Create a new project</h5>
