--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
   <!-- CARD CONTAINER -->
   <h2>Pinned</h2>
-  <div id="cardContainer" class="loopCard"></div>
+  <form id="cardContainer" class="loopCard"></form>
 
   <!-- FORM -->
-  <form id="formContainer" class="formStyle">
+  <!-- <form id="formContainer" class="formStyle">
     <form class="card">
       <div class="card-body">
       <h5 class="card-title">Create a new project</h5>
@@ -57,7 +57,8 @@
       </div>
     </form>
   </div>
-  </div>
+  </div> -->
+  <div id="formContainer"></div>
 
   <!-- FOOTER -->
   <div id="footerContainer"class="footerStyle">
