functional search bar

--- a/Projects.html
+++ b/Projects.html
@@ -29,7 +29,17 @@
   <!-- USER PROFILE -->
   <div id="userProfile"></div>
 
+  <div id="searchContainer" class="search-styles">
+    <nav class="navbar">
+      <form class="form-inline">   
+        <input id="searchBar" class="searchInput form-control mr-sm-2" type="search" placeholder= "🔍 Search all projects" aria-label="Search">
+        
+      </form>
+    </nav>
+</div>
+  
 <div id="loopContainer" class="loopCard loopContainer"></div>
+
 <form id="projectFormContainer" class="formStyle projectForm" >
   <div class="card">
     <div class="card-body">
