--- a/Packages.html
+++ b/Packages.html
@@ -29,7 +29,8 @@
   <!-- USER PROFILE -->
   <div id="userProfile"></div>
 
-<div id="cardsContainer" class="loopCard packagesContainer"></div>
+<div class="gutsContainer">
+  <div id="cardsContainer" class="loopCard packagesContainer"></div>
 
 <form id="formContainer"class="formStyle" >
   <div class="card">
@@ -50,6 +51,7 @@
     </div>
   </div>
 </form>
+</div>
 
   <div id="footerContainer"class="footerStyle">
     <nav class="nav justify-content-center">
