adjusted form and card container to the left on overview page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <form id="cardContainer" class="loopCard"></form>
 
     <!-- FORM -->
-    <div id="cardsContainer" class="loopCard"></div>
-
-    <form id="formContainer"class="formStyle" >
+    <form id="cbForm" class="formStyle">
       <div class="card">
         <div class="card-body">
         <h5 class="card-title">Pin a new repo</h5>
