--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <form id="cardContainer" class="loopCard"></form>
 
     <!-- FORM -->
-    <form id="cbForm" class="formStyle">
-      <div class="card">
+    <div id="cardsContainer" class="loopCard"></div>
+    <form id="formContainer"class="formStyle">
+      <div class="card" id="cbForm">
         <div class="card-body">
         <h5 class="card-title">Pin a new repo</h5>
         <h6 class="card-subtitle mb-2 text-muted">Coordinate, track and update your work in one place, so projects stay transparent and on schedule.</h6>
