fixed card spacing

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   <div class="loopContainer loopCard">
     <!-- CARD CONTAINER -->
     <h2 id="pinned">Pinned</h2>
-    <form id="cardContainer" class="loopCard"></form>
+    <form id="cardContainer" class="loopCard repoCards"></form>
 
     <!-- FORM -->
     <div id="cardsContainer" class="loopCard"></div>
-    <form id="formContainer"class="formStyle">
-      <div class="card" id="cbForm">
+    <form id="formContainer"class="formStyle cbForm">
+      <div class="card">
         <div class="card-body">
         <h5 class="card-title">Pin a new repo</h5>
         <h6 class="card-subtitle mb-2 text-muted">Coordinate, track and update your work in one place, so projects stay transparent and on schedule.</h6>
