html search bar

--- a/Packages.html
+++ b/Packages.html
@@ -51,6 +51,12 @@
     </div>
   </div>
 </form>
+
+<div class="searchBar">
+  <input type="text" class="form-control" placeholder="Search for a Package">
+  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+</div>
+
 </div>
 
   <div id="footerContainer"class="footerStyle">
