Added about area

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     </nav>
   </div>
 
-    <!-- USER PROFILE -->
-    <div id="userProfile"></div>
+  <!-- USER PROFILE -->
+  <div id="userProfile"></div>
 
   <div class="loopContainer loopCard">
+    <!-- ABOUT AREA -->
+    <div id="aboutArea"></div>
+
     <!-- CARD CONTAINER -->
     <h2 id="pinned">Pinned</h2>
-    <form id="cardContainer" class="loopCard repoCards"></form>
+    <form id="cardContainer" class=" repoCards"></form>
 
     <!-- FORM -->
     <div id="cardsContainer" class="loopCard"></div>
@@ -49,7 +52,7 @@
   </div>
 
   <!-- FOOTER -->
-  <div id="footerContainer"class="footerStyle">
+  <div id="footerContainer"class="footerStyle" id="overviewFooter">
     <nav class="nav justify-content-center">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
       <a class="nav-link active" aria-current="page" href="#">Terms</a>
