finished search bar

--- a/Packages.html
+++ b/Packages.html
@@ -29,7 +29,10 @@
   <!-- USER PROFILE -->
   <div id="userProfile"></div>
 
-<div class="gutsContainer">
+  <div class="searchBar" id="searchBar">
+    <input id="searchFeild" type="text" class="form-control" placeholder="Search for a Package">
+  </div>
+
   <div id="cardsContainer" class="loopCard packagesContainer"></div>
 
 <form id="formContainer"class="formStyle" >
@@ -52,12 +55,6 @@
   </div>
 </form>
 
-<div class="searchBar">
-  <input type="text" class="form-control" placeholder="Search for a Package">
-  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-</div>
-
-</div>
 
   <div id="footerContainer"class="footerStyle">
     <nav class="nav justify-content-center">
