Added about area

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <!-- FOOTER -->
-  <div id="footerContainer"class="footerStyle" id="overviewFooter">
+  <div id="footerContainer"class="footerStyle overviewFooter">
     <nav class="nav justify-content-center">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">@2021 GitHub, Inc.</a>
       <a class="nav-link active" aria-current="page" href="#">Terms</a>
